--- a/reference/common/schemas/report-model.yaml
+++ b/reference/common/schemas/report-model.yaml
@@ -29,51 +29,199 @@ type: object
 properties:
   status:
     allOf:
-    - $ref: ../schemas.yaml#/ReportStatusEnum
+    - type: integer
+      description: |-
+        Aktualny status generowania pliku raportu
+        <details>
+          <summary>Pokaż możliwe opcje</summary>
+
+          | Wartość | Nazwa |
+          |-|-|
+          | `0` | Niedostępny |
+          | `1` | W przygotowaniu |
+          | `2` | Gotowe |</details>
+      title: ReportStatusEnum
   file_password:
     type: string
-    title: File Password
     description: Hasło do pliku raportu
+    title: File Password
   creation_datetime:
     format: date-time
     type: string
-    title: Creation Datetime
     description: Data i czas utworzenia raportu
+    title: Creation Datetime
   name:
     type: string
-    title: Name
     description: Nazwa raportu
+    title: Name
   credits_used:
     type: integer
-    title: Credits Used
     description: Liczba punktów wykorzystanych do utworzenia raportu
+    title: Credits Used
   file_format:
-    $ref: ../schemas.yaml#/Format
+    enum:
+    - 1
+    - 2
+    - 3
+    - 4
+    - 5
+    type: integer
     description: Format pliku raportu
+    title: Format
   downloads:
     items:
       type: object
     type: array
-    title: Downloads
     description: Historia pobrań raportu
+    title: Downloads
   id:
     type: string
-    title: Id
     description: Unikalny identyfikator raportu
+    title: Id
   progress:
-    minimum: 0.0
-    type: integer
-    maximum: 100.0
     title: Progress
+    minimum: 0
+    type: integer
     description: Procentowy postęp generowania pliku raportu w skali 0-100
+    maximum: 100
   query:
-    $ref: ../schemas.yaml#/QueryBaseModel
     description: Identyfikatory kategorii ogłoszeń wybranych przez użytkownika
+    title: QueryBaseModel
+    required:
+    - from_date
+    - to_date
+    type: object
+    properties:
+      custom_categories:
+        items:
+          enum:
+          - K
+          - K.0
+          - K.0.0
+          - K.0.1
+          - K.0.2
+          - K.0.3
+          - K.0.4
+          - K.0.5
+          - K.0.6
+          - K.0.7
+          - K.0.8
+          - K.0.9
+          - K.0.10
+          - K.1
+          - K.1.20
+          - K.1.21
+          - K.1.22
+          - K.1.23
+          - K.1.24
+          - K.1.25
+          - K.1.26
+          - K.1.27
+          - K.1.28
+          - K.1.29
+          - K.1.30
+          - K.1.31
+          - K.1.32
+          - K.1.33
+          - K.1.34
+          - K.2
+          - K.2.40
+          - K.2.41
+          - M
+          - M.0
+          - M.0.1
+          - M.0.2
+          - M.0.3
+          - M.0.4
+          - M.0.5
+          - M.0.6
+          - M.0.7
+          - M.0.8
+          - M.0.9
+          - M.1
+          - M.1.20
+          - M.1.21
+          - M.1.22
+          - M.1.23
+          - M.1.24
+          - M.1.25
+          - M.1.26
+          - M.1.27
+          - M.1.28
+          - M.1.29
+          - M.1.30
+          - M.1.31
+          - M.1.32
+          - M.1.33
+          - M.1.34
+          - M.1.35
+          - M.1.36
+          - M.1.37
+          - M.1.38
+          - M.1.39
+          - M.1.40
+          - M.1.41
+          - M.1.42
+          - M.1.43
+          - M.1.44
+          - M.1.45
+          - M.1.46
+          - M.1.47
+          - M.1.48
+          - M.1.49
+          - M.1.50
+          type: string
+          description: An enumeration.
+          title: CategoriesEnum
+        type: array
+        description: Identyfikatory kategorii ogłoszeń wybranych przez użytkownika
+      from_date:
+        format: date
+        type: string
+        description: Data początkowa zakresu dla daty publikacji ogłoszenia w MSiG
+          lub KRZ
+        title: From Date
+      append_first_entry:
+        type: boolean
+        description: Czy pola z sekcji `entity` i `proceeding` powinny być przekopiowane
+          z pierwszego ogłoszenia w ramach postępowania?
+        title: Append First Entry
+      to_date:
+        format: date
+        type: string
+        description: Data końcowa zakresu dla daty publikacji ogłoszenia w MSiG lub
+          KRZ
+        title: To Date
+      filter_id:
+        nullable: true
+        type: string
+        description: Identyfikator filtra użytego do wygenerowania raportu
+        title: Filter Id
+    example:
+      custom_categories:
+      - K
+      from_date: '2021-11-02'
+      append_first_entry: true
+      to_date: '2021-11-04'
+      filter_id: 61ded2f8aff2de52365d891e
   type:
-    $ref: ../schemas.yaml#/TypesEnum
+    enum:
+    - 0
+    - 1
+    type: integer
+    description: |-
+      Rodzaj raportu.
+      <details>
+        <summary>Pokaż możliwe opcje</summary>
+
+        | Wartość | Nazwa |
+        |-|-|
+        | `0` | Aktualny |
+        | `1` | Archiwalny |</details>
+    title: TypesEnum
   custom_content:
     items: {}
     type: array
-    title: Custom Content
     description: Identyfikatory pól raportu wybranych przez użytkownika
+    title: Custom Content
 title: ReportModel
