--- a/reference/common/schemas/update-params-model.yaml
+++ b/reference/common/schemas/update-params-model.yaml
@@ -52,108 +52,116 @@ example:
   - content.html
   - content.url
   archival_reports_used: 0
-  credits_used: 0
   current_reports_available: 25
   current_reports_filter_required: false
-  archive_date_from: '2021-04-23'
-  monitors_used: 2
-  current_reports_used: 5
   api_requests_used: 100
   credits_available: 5
-  archival_reports_available: 5
   archival_reports_filter_required: false
-  monitors_emails_limit: 5
+  api_key: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
   panel_users:
   - abc@def.pl
   - xyz@ghi.pl
+  api_requests_available: 1000
+  credits_used: 0
+  archive_date_from: '2021-04-23'
+  monitors_used: 2
+  current_reports_used: 5
+  archival_reports_available: 5
+  monitors_emails_limit: 5
   filter_items_limit: 50
   panel_users_limit: 5
   monitors_available: 5
-  api_key: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
-  api_requests_available: 1000
 type: object
 properties:
   available_content:
     items:
       type: string
     type: array
-    title: Available Content
     description: Lista identyfikatorów pól, które użytkownik może uwzględnić w raportach
+    title: Available Content
   archival_reports_used:
     type: integer
-    title: Archival Reports Used
     description: Liczba utworzonych raportów archiwalnych
-  credits_used:
-    type: integer
-    title: Credits Used
-    description: Liczba identyfikatorów, o które użytkownik odpytał API albo których użył w filtrze dla raportu archiwalnego
+    title: Archival Reports Used
   current_reports_available:
     type: integer
+    description: Maksymalna liczba raportów aktualnych, które użytkownik może utorzyć
+      w ramach obecnego planu
     title: Current Reports Available
-    description: Maksymalna liczba raportów aktualnych, które użytkownik może utorzyć w ramach obecnego planu
   current_reports_filter_required:
     type: boolean
-    title: Current Reports Filter Required
     description: Czy przy tworzeniu raportu aktualnego użytkownik musi wybrać filtr?
-  archive_date_from:
-    format: date
-    type: string
-    title: Archive Date From
-    description: Data początkowa okresu, z którego użytkownik może pobierać ogłoszenia w ramach raportów aktualnych
-  monitors_used:
-    type: integer
-    title: Monitors Used
-    description: Liczba utworzonych monitoringów
-  current_reports_used:
-    type: integer
-    title: Current Reports Used
-    description: Liczba utworzonych raportów aktualnych
+    title: Current Reports Filter Required
   api_requests_used:
     type: integer
-    title: Api Requests Used
     description: Liczba wykonanych zapytań do API o pojedyncze ogłoszenia
+    title: Api Requests Used
   credits_available:
     type: integer
+    description: Maksymalna liczba identyfikatorów, o które użytkownik może odpytać
+      API w zapytaniu o ogłoszenia z całego archiwum (od 1.01.2021) albo których może
+      użyć w filtrze dla raportu archiwalnego w ramach obecnego planu
     title: Credits Available
-    description: Maksymalna liczba identyfikatorów, o które użytkownik może odpytać API w zapytaniu o ogłoszenia z całego archiwum (od 1.01.2021) albo których może użyć w filtrze dla raportu archiwalnego w ramach obecnego planu
-  archival_reports_available:
-    type: integer
-    title: Archival Reports Available
-    description: Maksymalna liczba raportów archiwalnych, które użytkownik może utorzyć w ramach obecnego planu
   archival_reports_filter_required:
     type: boolean
-    title: Archival Reports Filter Required
     description: Czy przy tworzeniu raportu aktualnego użytkownik musi wybrać filtr?
-  monitors_emails_limit:
-    type: integer
-    title: Monitors Emails Limit
-    description: Maksymalna liczba adresów e-mail przypisanych do pojedynczego monitoringu
+    title: Archival Reports Filter Required
+  api_key:
+    format: uuid
+    type: string
+    description: Klucz autoryzacji w API
+    title: Api Key
   panel_users:
     items:
       type: string
       format: email
     type: array
-    title: Panel Users
     description: Adresy e-mail użytkowników usługi
-  filter_items_limit:
-    type: integer
-    title: Filter Items Limit
-    description: Maksymalna liczba identyfikatorów w filtrze
-  panel_users_limit:
-    type: integer
-    title: Panel Users Limit
-    description: Maksymalna liczba użytkowników panelu usługi
-  monitors_available:
-    type: integer
-    title: Monitors Available
-    description: Maksymalna liczba monitoringów, które użytkownik może utorzyć w ramach obecnego planu
-  api_key:
-    format: uuid
-    type: string
-    title: Api Key
-    description: Klucz autoryzacji w API
+    title: Panel Users
   api_requests_available:
     type: integer
+    description: Maksymalna liczba zapytań do API o pojedyncze ogłoszenia, które użytkownik
+      może wykonać w ramach obecnego planu
     title: Api Requests Available
-    description: Maksymalna liczba zapytań do API o pojedyncze ogłoszenia, które użytkownik może wykonać w ramach obecnego planu
+  credits_used:
+    type: integer
+    description: Liczba identyfikatorów, o które użytkownik odpytał API albo których
+      użył w filtrze dla raportu archiwalnego
+    title: Credits Used
+  archive_date_from:
+    format: date
+    type: string
+    description: Data początkowa okresu, z którego użytkownik może pobierać ogłoszenia
+      w ramach raportów aktualnych
+    title: Archive Date From
+  monitors_used:
+    type: integer
+    description: Liczba utworzonych monitoringów
+    title: Monitors Used
+  current_reports_used:
+    type: integer
+    description: Liczba utworzonych raportów aktualnych
+    title: Current Reports Used
+  archival_reports_available:
+    type: integer
+    description: Maksymalna liczba raportów archiwalnych, które użytkownik może utorzyć
+      w ramach obecnego planu
+    title: Archival Reports Available
+  monitors_emails_limit:
+    type: integer
+    description: Maksymalna liczba adresów e-mail przypisanych do pojedynczego monitoringu
+    title: Monitors Emails Limit
+  filter_items_limit:
+    type: integer
+    description: Maksymalna liczba identyfikatorów w filtrze
+    title: Filter Items Limit
+  panel_users_limit:
+    type: integer
+    description: Maksymalna liczba użytkowników panelu usługi
+    title: Panel Users Limit
+  monitors_available:
+    type: integer
+    description: Maksymalna liczba monitoringów, które użytkownik może utorzyć w ramach
+      obecnego planu
+    title: Monitors Available
 title: UpdateParamsModel
