--- a/reference/ins_api/paths/create-monitor-v2-monitors-POST.yaml
+++ b/reference/ins_api/paths/create-monitor-v2-monitors-POST.yaml
@@ -30,16 +30,17 @@ responses:
           $ref: '#/components/schemas/Error'
     description: Bad Request
 parameters:
-- required: false
+- description: Klucz autoryzacji
+  required: false
   in: header
-  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
-  name: Authorization
-  description: Klucz autoryzacji
   schema:
     type: string
     title: Authorization
+  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
+  name: Authorization
 tags:
 - monitors_iapi
+description: Tworzy nowy monitoring przypisany do aktualnego użytkownika.
 summary: Create Monitor
 requestBody:
   content:
