--- a/reference/ins_api/paths/current-user-v2-users-me-GET.yaml
+++ b/reference/ins_api/paths/current-user-v2-users-me-GET.yaml
@@ -30,14 +30,14 @@ responses:
           $ref: '#/components/schemas/Error'
     description: Bad Request
 parameters:
-- required: false
+- description: Klucz autoryzacji
+  required: false
   in: header
-  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
-  name: Authorization
-  description: Klucz autoryzacji
   schema:
     type: string
     title: Authorization
+  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
+  name: Authorization
 tags:
 - users_iapi
 description: |-
