--- a/reference/ins_api/paths/report-formats-v2-dicts-report-formats-GET.yaml
+++ b/reference/ins_api/paths/report-formats-v2-dicts-report-formats-GET.yaml
@@ -1,4 +1,5 @@
 operationId: report_formats_v2_dicts_report_formats_get
+description: Zwraca słownik zawierający etykiety dla formatów pliku raportu.
 summary: Report Formats
 responses:
   '200':
