--- a/reference/ins_api/paths/types-v2-dicts-report-types-GET.yaml
+++ b/reference/ins_api/paths/types-v2-dicts-report-types-GET.yaml
@@ -1,4 +1,5 @@
 operationId: get_types_v2_dicts_report_types_get
+description: Zwraca słownik zawierający etykiety dla typów raportu.
 summary: Get Types
 responses:
   '200':
