--- a/reference/common/schemas/h-tt-pvalidation-error.yaml
+++ b/reference/common/schemas/h-tt-pvalidation-error.yaml
@@ -2,8 +2,25 @@ type: object
 properties:
   detail:
     items:
-      $ref: ../schemas.yaml#/ValidationError
+      required:
+      - loc
+      - msg
+      - type
+      type: object
+      properties:
+        msg:
+          type: string
+          title: Message
+        loc:
+          items:
+            type: string
+          type: array
+          title: Location
+        type:
+          type: string
+          title: Error Type
+      title: ValidationError
     type: array
-    title: Detail
     description: Szczegółowa informacja na temat błędu
+    title: Detail
 title: HTTPValidationError
