--- a/reference/ins_api/paths/actual-user-filters-v2-filters-GET.yaml
+++ b/reference/ins_api/paths/actual-user-filters-v2-filters-GET.yaml
@@ -1,5 +1,3 @@
-operationId: get_actual_user_filters_v2_filters_get
-summary: Get Actual User Filters
 responses:
   '200':
     content:
@@ -34,17 +32,20 @@ responses:
         schema:
           $ref: '#/components/schemas/Error'
     description: Bad Request
+description: Zwraca listę filtrów przypisanych do aktualnego użytkownika.
 parameters:
-- required: false
+- description: Klucz autoryzacji
+  required: false
   in: header
-  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
-  name: Authorization
-  description: Klucz autoryzacji
   schema:
     type: string
     title: Authorization
+  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
+  name: Authorization
 tags:
 - filters_iapi
+summary: Get Actual User Filters
+operationId: get_actual_user_filters_v2_filters_get
 components:
   schemas:
     $ref: ../../common/schemas.yaml
