--- a/reference/ins_api/paths/create-report-v2-reports-POST.yaml
+++ b/reference/ins_api/paths/create-report-v2-reports-POST.yaml
@@ -36,16 +36,17 @@ responses:
           $ref: '#/components/schemas/HTTPValidationError'
     description: Validation Error
 parameters:
-- required: false
+- description: Klucz autoryzacji
+  required: false
   in: header
-  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
-  name: Authorization
-  description: Klucz autoryzacji
   schema:
     type: string
     title: Authorization
+  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
+  name: Authorization
 tags:
 - reports_iapi
+description: Tworzy nowy raport przypisany do aktualnego użytkownika.
 summary: Create Report
 requestBody:
   content:
