--- a/reference/ins_api/paths/download-report-by-id-v2-reports-report-id-download-GET.yaml
+++ b/reference/ins_api/paths/download-report-by-id-v2-reports-report-id-download-GET.yaml
@@ -1,5 +1,3 @@
-operationId: download_report_by_id_v2_reports__report_id__download_get
-summary: Download Report By Id
 responses:
   '200':
     description: Download a single report
@@ -33,28 +31,32 @@ responses:
         schema:
           $ref: '#/components/schemas/HTTPValidationError'
     description: Validation Error
+description: Pobiera plik raportu o podanym id.
 parameters:
-- required: true
+- description: Unikalny identyfikator raportu
+  required: true
   in: path
   name: report_id
-  description: Unikalny identyfikator raportu
   schema:
     anyOf:
     - type: string
     - enum:
       - last
       type: string
+    example: '222222222222222222222222'
     title: Report Id
-- required: false
+- description: Klucz autoryzacji
+  required: false
   in: header
-  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
-  name: Authorization
-  description: Klucz autoryzacji
   schema:
     type: string
     title: Authorization
+  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
+  name: Authorization
 tags:
 - reports_iapi
+summary: Download Report By Id
+operationId: download_report_by_id_v2_reports__report_id__download_get
 components:
   schemas:
     $ref: ../../common/schemas.yaml
