--- a/reference/ins_api/paths/monitors-v2-monitors-GET.yaml
+++ b/reference/ins_api/paths/monitors-v2-monitors-GET.yaml
@@ -1,5 +1,3 @@
-operationId: get_monitors_v2_monitors_get
-summary: Get Monitors
 responses:
   '200':
     content:
@@ -34,17 +32,20 @@ responses:
         schema:
           $ref: '#/components/schemas/Error'
     description: Bad Request
+description: Zwraca listę monitorów przypisanych do aktualnego użytkownika.
 parameters:
-- required: false
+- description: Klucz autoryzacji
+  required: false
   in: header
-  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
-  name: Authorization
-  description: Klucz autoryzacji
   schema:
     type: string
     title: Authorization
+  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
+  name: Authorization
 tags:
 - monitors_iapi
+summary: Get Monitors
+operationId: get_monitors_v2_monitors_get
 components:
   schemas:
     $ref: ../../common/schemas.yaml
