--- a/reference/ins_api/paths/reports-v2-reports-DELETE.yaml
+++ b/reference/ins_api/paths/reports-v2-reports-DELETE.yaml
@@ -1,5 +1,3 @@
-operationId: delete_reports_v2_reports_delete
-summary: Delete Reports
 responses:
   '422':
     content:
@@ -27,6 +25,9 @@ responses:
         schema:
           $ref: '#/components/schemas/Error'
     description: Bad Request
+description: Usuwa raporty o identyfikatorach przekazanych w parametrze ids w query
+  stringu (po przecinku). W przypadku sukcesu metoda zwraca kod odpowiedzi 204 No
+  Content.
 parameters:
 - required: true
   in: query
@@ -35,20 +36,23 @@ parameters:
   name: ids
   schema:
     minLength: 24
+    example: '222222222222222222222222'
     type: string
     description: A list of id's whose ones are strings representing the ObjectId from
       bson.
     title: List of id
-- required: false
+- description: Klucz autoryzacji
+  required: false
   in: header
-  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
-  name: Authorization
-  description: Klucz autoryzacji
   schema:
     type: string
     title: Authorization
+  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
+  name: Authorization
 tags:
 - reports_iapi
+summary: Delete Reports
+operationId: delete_reports_v2_reports_delete
 components:
   schemas:
     $ref: ../../common/schemas.yaml
