--- a/reference/ins_api/paths/user-filters-v2-filters-id-PATCH.yaml
+++ b/reference/ins_api/paths/user-filters-v2-filters-id-PATCH.yaml
@@ -30,23 +30,25 @@ responses:
           $ref: '#/components/schemas/Error'
     description: Bad Request
 parameters:
-- required: true
+- description: Unikalny identyfikator filtra
+  required: true
   in: path
   name: id
-  description: Unikalny identyfikator filtra
   schema:
     type: string
+    example: '222222222222222222222222'
     title: Id
-- required: false
+- description: Klucz autoryzacji
+  required: false
   in: header
-  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
-  name: Authorization
-  description: Klucz autoryzacji
   schema:
     type: string
     title: Authorization
+  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
+  name: Authorization
 tags:
 - filters_iapi
+description: Modyfikuje filtr o podanym id.
 summary: Patch User Filters
 requestBody:
   content:
