--- a/reference/ins_api/paths/user-monitor-by-id-v2-monitors-id-GET.yaml
+++ b/reference/ins_api/paths/user-monitor-by-id-v2-monitors-id-GET.yaml
@@ -1,5 +1,3 @@
-operationId: get_user_monitor_by_id_v2_monitors__id__get
-summary: Get User Monitor By Id
 responses:
   '200':
     content:
@@ -37,28 +35,32 @@ responses:
         schema:
           $ref: '#/components/schemas/HTTPValidationError'
     description: Validation Error
+description: Zwraca monitoring o podanym id.
 parameters:
-- required: true
+- description: Unikalny identyfikator monitoringu
+  required: true
   in: path
   name: id
-  description: Unikalny identyfikator monitoringu
   schema:
     anyOf:
     - type: string
     - enum:
       - last
       type: string
+    example: '222222222222222222222222'
     title: Id
-- required: false
+- description: Klucz autoryzacji
+  required: false
   in: header
-  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
-  name: Authorization
-  description: Klucz autoryzacji
   schema:
     type: string
     title: Authorization
+  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
+  name: Authorization
 tags:
 - monitors_iapi
+summary: Get User Monitor By Id
+operationId: get_user_monitor_by_id_v2_monitors__id__get
 components:
   schemas:
     $ref: ../../common/schemas.yaml
